_sass/layouts/pages/_misc.scss
/*
    Lineup
*/

body.lineup {
    .content-box {
        @media (max-width: 767px) {
            grid-template-columns: 0.5fr 8fr 0.5fr;
        }
    }

    .featured-educators {
        margin-top: 5rem;
    }
}

/*
    Contact
*/

body.contact {
    .content-box {
        @media (min-width: 992px) {
            grid-template-columns: 1fr 8fr 1fr;
        }
    }

    .contact-grid {
        margin-top: 2rem;

        @media (max-width: 991px) {
            grid-template-columns: 12fr;
        }

        .contact-item {
            p {
                @media (min-width: 992px) {
                    font-size: 1.2rem;
                }

                @media (min-width: 768px) {
                    max-width: 95%;
                }

                @media (max-width: 991px) {
                    font-size: 1.5rem;
                }

                > a {
                    @media (max-width: 1564px) {
                        word-break: break-all;
                    }
                }
            }

            &:not(:last-of-type) {
                p {
                    @media (min-width: 768px) {
                        max-width: 85%;
                    }
                }
            }
        }
    }
}

/*
    Add padding bottom to content when consent bar showing
*/

body {
    &:not(.terms-accepted) {
        .content-inner {
            padding-bottom: 3.5rem;
        }
    }
}

/*
    Content box - will override height on a per-page basis
*/

.content-box {
    height: auto;
    min-height: 92.1vh;

    p, li {
        a {
            &:not([class*="text-"]):not([class*="link-"]) {
                color: $medium-slate-blue;
            }
        }
    }

    ul.links {
        li {
            a {
                @media (max-width: 567px) {
                    display: block;
                    font-size: 1rem;
                    margin-top: .5rem;
                    word-break: break-all;
                }
            }
        }
    }

    h1, .h1 {
        @media (max-width: 567px) {
            font-size: 2.1rem;
        }
    }

    h2, .h2 {
        @media (max-width: 567px) {
            font-size: 2rem;
        }

        &.featured-educator-title {
            @media (max-width: 767px) {
                font-size: 1.5rem;
            }
        }
    }
}

body.contact {
    .content-box {
        @media (max-width: 567px) {
            grid-template-columns: 0.5fr 8fr 0.5fr;
        }

        h1, .h1 {
            &:first-child {
                @media (max-width: 567px) {
                    text-align: center;
                }
            }
        }
    }
}

body.faq, body.faqs {
    .content-box {
        @media (max-width: 567px) {
            padding-bottom: 0;
            grid-template-columns: 0fr 12fr 0fr;
        }

        .content-inner {
            h1, .h1, > p {
                @media (max-width: 567px) {
                    max-width: 85%;
                    margin-left: auto;
                    margin-right: auto;
                }

                a {
                    @media (max-width: 567px) {
                        font-size: 1.2rem;
                    }
                }
            }
        }
    }
}

